--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@privy-io/react-auth": "^1.34.0",
+    "@privy-io/wagmi-connector": "^0.1.0",
+    "framer-motion": "^10.16.0",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "eslint": "8.47.0",
